Fixed styling in welcome image and welcome text to fit better on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -148,8 +148,9 @@ h4.flash{
 }
 
 .welcome-image img {
-  height: 50rem;
-  
+    width: 100%;
+    max-height: 50rem;
+    object-fit: cover;
 }
 
 .overlay-text {
@@ -447,5 +448,15 @@ p.text-form.text-upload{
     }
     form.col.col-md-6.offset-md-1.sign-panel{
     margin: 0 auto;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .overlay-text{
+        width: 100%;
+    }
+    p.welcome-text{
+        font-size: 1.2rem;
+        text-align: justify;
     }
 }
